# agentic

./: main.py  pyproject.toml
src/: ai-orchestrator.ipynb  ai-solver.ipynb
src/bot/: README.md  ai-assistant.ipynb  ai-assistant.py  requirements.txt  summary.txt
