[project]
name = "ai-solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.41.1",
    "ipykernel>=6.30.0",
    "ipywidgets>=8.1.7",
    "jupyterlab-widgets>=3.0.15",
    "openai>=1.98.0",
    "pydantic>=2.11.7",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.7",
    "widgetsnbextension>=4.0.14",
]
